--- a/src/styles/sass/globals.scss
+++ b/src/styles/sass/globals.scss
@@ -1,40 +1,6 @@
-//
-//  1. Variables - ogólno-apkowe
-//
-//      1.1. Kolory
-//
-//      1.2. Czcionki
-//
-//      1.3. Breakpointy - graniczne momenty pod zmianę rozmiarów, pod np. 4 wielkości ekranów
-//
 
-//
-//      1.1. Kolory
-//
-$color-primary: #c69963;
-$color-primary-dark: #b28451;
-
-$color-secondary: #101d2c;
-
-$color-grey-light-1: #f9f7f6;
-$color-grey-light-2: #aaa;
-
-$color-grey-dark-1: #54483a;
-$color-grey-dark-2: #6d5d4b;
-
-//
-//      1.2. Czcionki
-//
-$font-primary: "Roboto Condensed", sans-serif;
-$font-display: "Josefin Sans", sans-serif;
-
-//
-//      1.3. Breakpointy - graniczne momenty pod zmianę rozmiarów, pod np. 4 wielkości ekranów
-//
-$bp-largest: 75em; // 1200px
-$bp-large: 62.5em; // 1000px
-$bp-medium: 50em; // 800px;
-$bp-small: 37.5em; // 600px;
+@use "../../../src/styles/sass/base/typography";
+@use "../../../src/styles/sass/abstracts/colors";
 
 *,
 *::before,
@@ -44,19 +10,54 @@ $bp-small: 37.5em; // 600px;
   box-sizing: inherit;
 }
 
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
 }
 
-body {
-  font-family: $font-primary;
-  color: $color-grey-dark-2;
-  font-weight: 300;
-  line-height: 1.6;
+@mixin fontStylingGlobal {
+  font-family: typography.$font-family-primary;
+  font-size: typography.$font-size-sm;
+  font-weight: typography.$font-weight-normal;
+}
+body,
+button {
+  @include fontStylingGlobal();
+  font-size: typography.$font-size-md;
+  line-height: typography.$line-height-sm;
+  text-align: center;
+  color: colors.$quaternary-light;
+  overflow: hidden;
 
-  // //hide scroollbars \/
-  // overflow: hidden;
+  ::placeholder {
+    @include fontStylingGlobal();
+  }
+  ::-webkit-input-placeholder {
+    @include fontStylingGlobal();
+  }
+  :-moz-placeholder {
+    @include fontStylingGlobal();
+  }
+  ::-moz-placeholder {
+    @include fontStylingGlobal();
+  }
+  :-ms-input-placeholder {
+    @include fontStylingGlobal();
+  }
+}
+
+input,
+select {
+  @include fontStylingGlobal();
 }
 
 a {
