--- a/src/styles/sass/base/_helpers.scss
+++ b/src/styles/sass/base/_helpers.scss
@@ -1,5 +1,6 @@
-//Clear inner floats
-
+//
+//~~ _.  Globally used helper styles (for example "quick fix for floating element") - locally used helpers are in their specific files, where they are used
+//
 .clearfix::after {
   clear: both;
   content: "";
