--- a/src/styles/sass/components/_modal.scss
+++ b/src/styles/sass/components/_modal.scss
@@ -1,3 +1,6 @@
+//
+//~~ _.  Globally used modals - locally used modals are in their specific files, where they are used
+//
 @use "../../../styles/sass/abstracts/mixins";
 @use "../../../styles/sass/abstracts/colors";
 @use "../../../styles/sass/abstracts/variables";
