--- a/src/styles/sass/styles-all.module.scss
+++ b/src/styles/sass/styles-all.module.scss
@@ -2,8 +2,19 @@
 @use "./abstracts/mixins";
 @use "./abstracts/variables";
 
-@use "./base/base";
 @use "./base/helpers";
+@use "./base/reset";
+@use "./base/typography";
 
 @use "./components/backdrop";
 @use "./components/modal";
+// @use "./components";
+
+@use "./layout/footer";
+@use "./layout/grid";
+@use "./layout/navbar";
+
+@use "./pages/items-to-buy";
+@use "./pages/shops_to-visit";
+@use "./pages/weather-conditions";
+// @use "./pages";
