--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -1,4 +1,20 @@
+//
+//~~ _.  Globally used variables (global font/grid sizes etc.) - locally used variables are in their specific files, where they are used
+//
+//       _._. Grids row sizes
+//
+//       _._. Grids column sizes
+//
+
+//
+//       _._. Grids row sizes
+//
 $row-size-sm: minmax(2rem, max-content);
 $row-size-md: minmax(3rem, max-content);
 $row-size-lg: minmax(10rem, max-content);
-$column-size: 3rem;
+//
+//       _._. Grids column sizes
+//
+$column-size-md: 3rem;
+$column-size-lg: 9rem;
+$column-size-md-maxcontent: minmax(3rem, max-content);
