--- a/src/styles/sass/components/_backdrop.scss
+++ b/src/styles/sass/components/_backdrop.scss
@@ -1,3 +1,7 @@
+//
+//~~ _.  Globally used backdrops - locally used backdrops are in their specific files, where they are used
+//
+
 @use "../../../styles/sass/abstracts/mixins";
 @use "../../../styles/sass/abstracts/colors";
 @use "../../../styles/sass/abstracts/variables";
