Added positioning to landing page - v2

--- a/src/styles/sass/_template-cheatsheet.scss
+++ b/src/styles/sass/_template-cheatsheet.scss
@@ -1,6 +1,8 @@
 //
 //~~ _.  Example component, which will be styled
 //
+//       _._. Workflow Quick AF
+//
 //       _._. CheatSheet
 //
 //       _._. Main grid system (inside a dedicated parent container) - for positioning the components layout
@@ -22,6 +24,33 @@
 //                  _._._._. Children - Styling
 //
 //           _._._. Align/justify center for every descending element - since mostly you would write a/j in those elements anyway
+//
+
+//
+//       _._. Workflow Quick AF
+//
+// ______
+//   &  UPRECYZUJ CEL AKTUALNY
+// ______
+// [ v ] _. Figma file z "Historyjka"               -   Prostokąty kolorowe, symbolizujące grid/grid items (skopiuj z template'u figmowskiego)
+// [ v ] _. Figma file z "Historyjka"               -   Czarne okienko pod "herehere" wstaw (w tworzony akurat Frame)
+// ______
+// BASE SCSS FILES AND BEM CLASSES CREATION
+// ______
+// [   ] _. "globals.scss"                          -   Globalne style edytuj (jeśli potrzeba) -
+// [   ] _. [abstracts] i "_typography.scss"        -   Wszystkie MIARY, które można, skropl w uniwersalnie używalne miary, palety kolorów itp.
+// [   ] _. [layout]                                -   Footer, navbar i inne potrzebne "stałe, poza body" elementy
+// [   ] _. [components]                            -   Wszystkie FRAGMENTY wizualne, które można, skropl w uniwersalnie używalne componenty (np. button używany wizualnie na paru pages)
+// [   ] _. [pages]                                 -   Unikatowe dla danej strony wizuale tutaj stwórz
+// [   ] _. "styles-all.module.scss"                -   Dodaj all scss files tutaj, poprzez "@use..."
+// ______
+// PREPARE HTML FOR SCSS INJECTION  &  LETS GO CSS
+// ______
+// [   ] _. "... . jsx" files                       -   Oczyść zbędne html elementy (Żeby zbędnych class pozycjonujących nie musieć pisać)
+// [   ] _. "... . jsx" files                       -   Dodaj nazwy class do adekwatnych HTML elementów (bo w next krokach będzie potrzeba widać efekty pisanyc css properties)
+// [   ] _. "... . jsx" files                       -   Semantic html names, write them, instead of <div> everywhere
+// [   ] _. "... . scss" files                      -   write self & child POSITIONING css properties (ORDER : [layout] > [components] > [pages])
+// [   ] _. "... . scss" files                      -   write self & child STYLING css properties (ORDER : [layout] > [components] > [pages])
 //
 
 @use "../../../styles/sass/abstracts/mixins";
@@ -63,26 +92,26 @@
     //
     display: grid; //           _._._. Variant "Strictly set row/column amounts & sizes"
     grid-template-rows:
-      [r-0] variables.$row-size-sm
-      [r-1] variables.$row-size-sm
-      [r-2] variables.$row-size-sm
-      [r-3] variables.$row-size-sm
-      [r-4] variables.$row-size-sm
-      [r-5] variables.$row-size-sm
+      [r-0] 1fr
+      [r-1] 1fr
+      [r-2] 1fr
+      [r-3] 1fr
+      [r-4] 1fr
+      [r-5] 1fr
       [r-6];
     grid-template-columns:
-      [c-0] variables.$column-size-md
-      [c-1] variables.$column-size-md
-      [c-2] variables.$column-size-md
-      [c-3] variables.$column-size-md
-      [r-4] variables.$column-size-md
-      [r-5] variables.$column-size-md
+      [c-0] 1fr
+      [c-1] 1fr
+      [c-2] 1fr
+      [c-3] 1fr
+      [r-4] 1fr
+      [r-5] 1fr
       [r-6];
     //
     // display: grid; //           _._._. Variant "Automatically set row/column amounts & sizes"
     // grid-auto-flow: column;
     // grid-auto-columns: 1fr;
-    // grid-auto-rows: variables.$row-size-sm;
+    // grid-auto-rows: 1fr;
     // row-gap: 0.8rem;
     //
     // justify-items: end; // defaultly set to "center" inside "_globals.scss"
@@ -107,12 +136,12 @@
     // background-color: green;
     //                  _._._._. Children - Sizes & Positioning
     // display: grid;
-    // grid-template-rows:[r-0] variables.$row-size-sm [r-1];
-    // grid-template-columns:[c-0] variables.$column-size-md [c-1];
+    // grid-template-rows:[r-0] 1fr [r-1];
+    // grid-template-columns:[c-0] 1fr [c-1];
     // ||
     // grid-auto-flow: column;
     // grid-auto-columns: 1fr;
-    // grid-auto-rows: variables.$row-size-sm;
+    // grid-auto-rows: 1fr;
     //                  _._._._. Children - Styling
     // & * { background-color: yellow; }
     //
