--- a/src/styles/sass/globals.scss
+++ b/src/styles/sass/globals.scss
@@ -47,7 +47,7 @@ input,
 select,
 div {
   @include fontStylingGlobal();
-  color: colors.$quaternary-light;
+  color: colors.$forth-light;
   border: none;
   width: 100%;
   height: 100%;
