--- a/src/styles/sass/_template-to-copy-paste.scss
+++ b/src/styles/sass/_template-to-copy-paste.scss
@@ -16,12 +16,12 @@
     background-color: rgb(0, 64, 160);
 
     // display: grid;
-    // grid-template-rows:[r-0] variables.$row-size-sm [r-1];
-    // grid-template-columns:[c-0] variables.$column-size-md [c-1];
+    // grid-template-rows:[r-0] 1fr [r-1];
+    // grid-template-columns:[c-0] 1fr [c-1];
     // ||
     // grid-auto-flow: column;
     // grid-auto-columns: 1fr;
-    // grid-auto-rows: variables.$row-size-sm;
+    // grid-auto-rows: 1fr;
   }
   &__child-element-name {
   }
