--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -6,15 +6,17 @@
 //       _._. Grids column sizes
 //
 
+// DONT USE THOSE SIZES. DEFAULT ROW/COLUMNS SIZES ARE ALMOST N E V E R USEFUL. AND OFTEN HARMFUL
+
 //
 //       _._. Grids row sizes
 //
-$row-size-sm: minmax(2rem, max-content);
-$row-size-md: minmax(3rem, max-content);
-$row-size-lg: minmax(10rem, max-content);
+// $row-size-sm: minmax(2rem, max-content);
+// $row-size-md: minmax(3rem, max-content);
+// $row-size-lg: minmax(10rem, max-content);
 //
 //       _._. Grids column sizes
 //
-$column-size-md: 3rem;
-$column-size-lg: 9rem;
-$column-size-md-maxcontent: minmax(3rem, max-content);
+// $column-size-md: 3rem;
+// $column-size-lg: 9rem;
+// $column-size-md-maxcontent: minmax(3rem, max-content);
