--- a/src/styles/sass/layout/_footer.scss
+++ b/src/styles/sass/layout/_footer.scss
@@ -23,7 +23,7 @@
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
-    grid-auto-rows: variables.$row-size-sm;
+    grid-auto-rows: 1fr;
     column-gap: 3rem;
 
     & * {
