--- a/src/styles/sass/layout/_navbar.scss
+++ b/src/styles/sass/layout/_navbar.scss
@@ -20,7 +20,7 @@
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
-    grid-auto-rows: variables.$row-size-sm;
+    grid-auto-rows: 1fr;
     column-gap: 3rem;
 
     & * {
@@ -30,12 +30,17 @@
   }
   &__menu-item-container {
     padding: 1rem;
-    width: 8rem;
+    width: 10rem;
     aspect-ratio: 1/1.2;
 
     background-color: rgb(64, 245, 64);
     border: none;
 
+    display: grid;
+    grid-template-rows: [r-0] 1.5fr [r-1] 0.5fr [r-2];
+    & div {
+      display: grid;
+    }
     &--disabled {
       filter: grayscale(1);
     }
