Added styling of body - landing page

--- a/src/styles/sass/abstracts/_colors.scss
+++ b/src/styles/sass/abstracts/_colors.scss
@@ -18,6 +18,10 @@ $secondary-light: #fac3c6;
 $third-light: #c08285;
 $forth-light: #61270e;
 $fifth-light: #ffffff;
+
+$shadow-sharp-right: 0.2rem 0 0rem 0 rgba(0, 0, 0, 0.3);
+$shadow-sharp-right-down: 1.1rem 0.3rem 0rem 0 rgba(0, 0, 0, 0.3);
+$shadow-sharp-right-down-close: 0.3rem 0.3rem 0rem 0 rgba(0, 0, 0, 0.3);
 //
 //       _._. Colors which depend on states - disabled, error, success etc.
 //
