--- a/src/styles/sass/components/_item-edit-view.scss
+++ b/src/styles/sass/components/_item-edit-view.scss
@@ -10,8 +10,10 @@
 .item-edit-view {
   &__container {
     width: max(20rem, 100%);
-
     aspect-ratio: 6/1;
+
+    box-shadow: colors.$shadow-sharp-right-down;
+    border-radius: 1rem;
 
     display: grid;
     grid-template-rows: [r-0] 1fr [r-1];
@@ -21,23 +23,36 @@
   &__img {
     position: relative;
     width: 100%;
-    height: 100%;
+
+    aspect-ratio: 1/1;
+    z-index: 15;
+
+    border-radius: 1rem;
+    box-shadow: colors.$shadow-sharp-right;
 
     & img {
       border-radius: 1rem;
     }
   }
   &__title {
-    border-radius: 0 1rem 1rem 0;
+    padding: 0 20% 0 20%;
+    width: 120%;
+    z-index: 10;
 
-    background-color: bisque;
+    border-radius: 0 1rem 1rem 0;
+    box-shadow: colors.$shadow-sharp-right;
+    background-color: colors.$secondary-light;
 
     display: grid;
+    justify-items: start;
   }
   &__amounts-container {
-    border-radius: 0 1rem 1rem 0;
+    padding: 0 20% 0 50%;
+    width: 120%;
+    z-index: 5;
 
-    background-color: rgb(197, 171, 139);
+    border-radius: 0 1rem 1rem 0;
+    background-color: colors.$succes;
 
     display: grid;
     grid-template-rows: [r-0] 1.75fr [r-1] 1fr[r-2];
