Added positioning to landing page css

--- a/src/styles/sass/_template-to-copy-paste.scss
+++ b/src/styles/sass/_template-to-copy-paste.scss
@@ -25,4 +25,12 @@
   }
   &__child-element-name {
   }
+  &__child-button-with-active-and-hover-effect-name {
+    & :hover {
+      filter: saturate(1.5);
+    }
+    & :active {
+      filter: saturate(1);
+    }
+  }
 }
