--- a/src/styles/sass/components/_item-edit-view.scss
+++ b/src/styles/sass/components/_item-edit-view.scss
@@ -42,6 +42,8 @@
     border-radius: 0 1rem 1rem 0;
     box-shadow: colors.$shadow-sharp-right;
     background-color: colors.$secondary-light;
+    font-size: typography.$font-size-md;
+    font-weight: typography.$font-weight-bold;
 
     display: grid;
     justify-items: start;
@@ -59,6 +61,9 @@
     grid-template-columns: [c-0] 1fr [c-1] 1fr[c-2] 1fr [c-3];
 
     & div {
+      font-size: typography.$font-size-md;
+      // font-weight: typography.$font-weight-bold;
+
       display: grid;
     }
   }
