--- a/src/styles/sass/layout/_navbar.scss
+++ b/src/styles/sass/layout/_navbar.scss
@@ -14,8 +14,11 @@
 .navbar {
   &__container {
     padding: 2rem 5rem 2rem 5rem;
+    margin: 0 0 2rem 0;
 
     background-color: colors.$primary-light;
+    border-bottom: 0.75rem solid colors.$third-light;
+    border-radius: 3rem;
 
     display: grid;
     grid-auto-flow: column;
