--- a/src/styles/sass/base/_typography.scss
+++ b/src/styles/sass/base/_typography.scss
@@ -22,6 +22,7 @@ $font-family-primary: "Gill Sans", "Gill Sans MT", "Calibri", sans-serif;
 $font-size-sm: 1.5rem;
 $font-size-md: 1.65rem;
 $font-size-lg: 2.5rem;
+$font-size-xl: 3.5rem;
 //
 //       _._. Font weights
 //
