--- a/src/styles/sass/layout/_navbar.scss
+++ b/src/styles/sass/layout/_navbar.scss
@@ -39,6 +39,9 @@
     background-color: colors.$secondary-light;
     border: none;
     border-radius: 2rem;
+    & :hover {
+      filter: saturate(1);
+    }
 
     display: grid;
     grid-template-rows: [r-0] 1.5fr [r-1] 0.5fr [r-2];
