Experiment - with transforming the item component css into a two-variant class, thanks to mixins

--- a/src/styles/sass/_template-cheatsheet.scss
+++ b/src/styles/sass/_template-cheatsheet.scss
@@ -30,7 +30,11 @@
 //       _._. Workflow Quick AF
 //
 // ______
-//   &  UPRECYZUJ CEL AKTUALNY
+// UCOMPONENTNIJ (VARIABLES NAWET) JUŻ SAM PROJEKT W FIGMIE
+// ______
+// [   ] _. Figma file z "Historyjka"               -   WSZYSTKO W COMPONENTS REUŻYWALNE spróbuj pogrupowac JUŻ W FIGMIE. Na odstawie tychże componentów od razu będziesz wiedział jakie MIXINS I COMPONENTS GLOBALNE utworzyć, a które lokalne. nawet shadow or barder radius są powtarzalne
+// ______
+// UPRECYZUJ CEL AKTUALNY
 // ______
 // [ v ] _. Figma file z "Historyjka"               -   Prostokąty kolorowe, symbolizujące grid/grid items (skopiuj z template'u figmowskiego)
 // [ v ] _. Figma file z "Historyjka"               -   Czarne okienko pod "herehere" wstaw (w tworzony akurat Frame)
@@ -50,6 +54,12 @@
 // [   ] _. "... . jsx" files                       -   Dodaj nazwy class do adekwatnych HTML elementów (bo w next krokach będzie potrzeba widać efekty pisanyc css properties)
 // [   ] _. "... . jsx" files                       -   Semantic html names, write them, instead of <div> everywhere
 // [   ] _. "... . scss" files                      -   write self & child POSITIONING css properties (ORDER : [layout] > [components] > [pages])
+//
+//                                                  [   ]     - OD RAZU RESPONSYWNE ROZMIARY - hook1 jak?
+//                                                  [   ]     -
+//                                                  [   ]     -
+//                                                  [   ]     -
+//
 // [   ] _. "... . scss" files                      -   write self & child STYLING css properties (ORDER : [layout] > [components] > [pages])
 //
 
