--- a/src/styles/sass/abstracts/_mixins.scss
+++ b/src/styles/sass/abstracts/_mixins.scss
@@ -28,10 +28,12 @@
 //           _._._. Item container
 //
 @mixin item-container {
-  width: max(20rem, 100%);
-  aspect-ratio: 6/1;
+  width: max(
+    20rem,
+    100%
+  ); //hook1 - VERY risky, sinze 20rem may overflow. clamp maybe?
+  aspect-ratio: 6/1; // hoo1 trap1 - aspect ratio, combined with widti max20rem-100%, destroyed my modal size for somereason. understand why for the future
 
-  box-shadow: colors.$shadow-sharp-right-down;
   border-radius: 1rem;
 }
 
@@ -44,37 +46,27 @@
   aspect-ratio: 1/1;
   z-index: 15;
 
-  border-radius: 1rem;
   box-shadow: colors.$shadow-sharp-right;
-
-  & img {
-    border-radius: 1rem;
-  }
 }
 //
 //           _._._. Title
 //
 @mixin item-title {
-  padding: 0 20% 0 20%;
-  width: 110%;
   z-index: 10;
-  transform: translateX(-1.2rem);
 
-  border-radius: 0 1rem 1rem 0;
   box-shadow: colors.$shadow-sharp-right;
   background-color: colors.$secondary-light;
   font-size: typography.$font-size-md;
   font-weight: typography.$font-weight-bold;
 
   display: grid;
-  justify-items: start;
 }
 //
 //           _._._. Amounts container
 //
 @mixin item-amounts-container {
   padding: 0 20% 0 25%;
-  width: 120%;
+
   z-index: 5;
 
   border-radius: 0 1rem 1rem 0;
