--- a/src/styles/sass/components/_modal.scss
+++ b/src/styles/sass/components/_modal.scss
@@ -46,7 +46,7 @@
       height: 94vh;
       width: 90vw;
 
-      background-color: rgb(193, 144, 144);
+      background-color: colors.$fifth-light;
     }
   }
   &-warning {
