--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -1,22 +1,9 @@
 //
 //~~ _.  Globally used variables (global font/grid sizes etc.) - locally used variables are in their specific files, where they are used
 //
-//       _._. Grids row sizes
-//
-//       _._. Grids column sizes
-//
 
-// DONT USE THOSE SIZES. DEFAULT ROW/COLUMNS SIZES ARE ALMOST N E V E R USEFUL. AND OFTEN HARMFUL
+// TRAP   -   DONT USE GLOBAL VARIABLES FOR ROW SIZES. ITS ALMOST NEVER HELPFIUL, AND V ERY DANGEROUS, BECAUSE THEY OVERWRITE STUFF ("SPECIFITY" REASONS)
 
-//
-//       _._. Grids row sizes
-//
-// $row-size-sm: minmax(2rem, max-content);
-// $row-size-md: minmax(3rem, max-content);
-// $row-size-lg: minmax(10rem, max-content);
-//
-//       _._. Grids column sizes
-//
-// $column-size-md: 3rem;
-// $column-size-lg: 9rem;
-// $column-size-md-maxcontent: minmax(3rem, max-content);
+$border-radius-sm: 2rem;
+$border-radius-md: 4rem;
+$border-radius-lg: 6rem;
