Fixed modal and backdrop size - it takes the whole page now - and disabled page scrolling when modal is open

--- a/src/styles/sass/components/_backdrop.scss
+++ b/src/styles/sass/components/_backdrop.scss
@@ -11,7 +11,7 @@
 .backdrop {
   &--black-50-opacity {
     display: grid;
-    position: absolute;
+    position: fixed; // not absolute, so that it covers the whole page, not just the whole screen
     top: 0;
     left: 0;
     height: 100%;
