Added scrolling inside item list and inside modal - in case someone uses a huge font

--- a/src/styles/sass/components/_modal.scss
+++ b/src/styles/sass/components/_modal.scss
@@ -13,6 +13,7 @@
     height: 100%;
     width: 100%;
     z-index: 250;
+    overflow-y: scroll; // allows scrolling inside the component
 
     display: grid;
   }
